# clitheme-cpp

./: CMakeLists.txt  README.md
src/: data_handlers.cpp  data_handlers.hpp  db_interface.cpp  db_interface.hpp  entry_block.cpp  entry_block.hpp  exec_handler.cpp  exec_handler.hpp  generator_object.cpp  generator_object.hpp  globalvar.cpp  globalvar.hpp  locale_detect.cpp  locale_detect.hpp  main.cpp  options.hpp  pcre2_regex.cpp  pcre2_regex.hpp  sanity_check.cpp  sanity_check.hpp  section_entries.cpp  section_entries.hpp  section_header.cpp  section_header.hpp  section_manpages.cpp  section_manpages.hpp  section_substrules.cpp  section_substrules.hpp  string_utils.hpp  substrules_processor.cpp  substrules_processor.hpp
