cmake_minimum_required(VERSION 3.14)
project(clitheme-cpp VERSION 2.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(SQLite3 REQUIRED)
find_package(ZLIB REQUIRED)
file(GLOB_RECURSE SOURCES src/*.cpp)
add_executable(clitheme-cpp ${SOURCES})
target_link_libraries(clitheme-cpp PRIVATE SQLite::SQLite3 ZLIB::ZLIB)
install(TARGETS clitheme-cpp DESTINATION bin)
