cmake_minimum_required(VERSION 3.14)
project(clitheme-cpp VERSION 2.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(SQLite3 REQUIRED)
find_package(ZLIB REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(PCRE2 REQUIRED libpcre2-8)
file(GLOB_RECURSE SOURCES src/*.cpp)
add_executable(clitheme-cpp ${SOURCES})
target_include_directories(clitheme-cpp PRIVATE ${PCRE2_INCLUDE_DIRS})
target_link_libraries(clitheme-cpp PRIVATE SQLite::SQLite3 ZLIB::ZLIB ${PCRE2_LIBRARIES} util)
install(TARGETS clitheme-cpp DESTINATION $ENV{HOME}/.local/share/clitheme)
